[package]
name = "slug"
keywords = ["slugify", "slug", "id"]
version = "0.1.4"
authors = ["Steven Allen <steven@stebalien.com>"]

description = "Convert a unicode string to a slug"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/Stebalien/slug-rs"
homepage = "https://github.com/Stebalien/slug-rs"
documentation = "https://docs.rs/slug"

[dependencies]
deunicode = "1"
