[package]
name = "slug"
keywords = ["slugify", "slug", "id"]
version = "0.1.5"
authors = ["Steven Allen <steven@stebalien.com>"]
edition = "2021"
description = "Convert a unicode string to a slug"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/Stebalien/slug-rs"
homepage = "https://github.com/Stebalien/slug-rs"
documentation = "https://docs.rs/slug"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
deunicode = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
